HashDB auth with simple account registration

--- a/static/css/episodes.css
+++ b/static/css/episodes.css
@@ -36,6 +36,6 @@ table.big-calendar > tbody > tr > td {
 
 table.big-calendar > tbody > tr > td.day {
     font-size: 75%;
-    background-color: #e5f8f5;
+    background-color: #f0f8f6;
 }
 
