--- a/static/css/episodes.css
+++ b/static/css/episodes.css
@@ -31,7 +31,10 @@ table.big-calendar {
 }
 
 table.big-calendar > tbody > tr > td {
+    vertical-align: : top;
+    font-size: 10pt;
     border: 1px solid #789;
+    width: 14%;
 }
 
 table.big-calendar > tbody > tr > td.day {
