--- a/static/css/episodes.css
+++ b/static/css/episodes.css
@@ -31,14 +31,22 @@ table.big-calendar {
 }
 
 table.big-calendar > tbody > tr > td {
-    vertical-align: : top;
+    vertical-align: top;
     font-size: 10pt;
-    border: 1px solid #789;
+    border: 1px solid black;
     width: 14%;
+    padding: 1pt;
 }
 
 table.big-calendar > tbody > tr > td.day {
-    font-size: 75%;
-    background-color: #f0f8f6;
+    font-size: 72%;
 }
 
+table.big-calendar > tbody > tr > td > table > tbody > tr > td {
+    vertical-align: baseline;
+}
+
+table.big-calendar > tbody > tr > td > table > tbody > tr > td.checkbox-td {
+    font-size: 72%;
+    padding: 2pt;
+}
